Force Gradle and Flutter to use project JDK 17